--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -30,6 +30,13 @@ spec:
             configMapKeyRef:
               name: mysql-configmap
               key: mysql-database-name
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pvc
 ---
 apiVersion: v1
 kind: Service
