--- a/task-tracker-web-ui/angular.json
+++ b/task-tracker-web-ui/angular.json
@@ -32,19 +32,6 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -56,7 +43,8 @@
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
                 }
-              ]
+              ],
+              "outputHashing": "all"
             },
             "development": {
               "buildOptimizer": false,
@@ -110,6 +98,6 @@
     }
   },
   "cli": {
-    "analytics": "2b01451a-88c1-4491-bffe-d8ce68d88416"
+    "analytics": false
   }
 }
