--- a/task-tracker-web-ui/package.json
+++ b/task-tracker-web-ui/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "start:dapr": "dapr run --app-port 4200 --app-id tasks-ng-web-ui --app-protocol http --dapr-http-port 3501 -- npm run start"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
